cluster/apps/development/docker-registry/docker-registry-middleware.yaml
# docker-registry-cors-middleware

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: docker-registry-cors-middleware
  namespace: docker-registry
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      # - HEAD
      - PUT
      - POST
      - DELETE
    accessControlAllowOriginList:
      - https://registry-ui.${SECRET_DOMAIN}
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
    accessControlAllowHeaders:
      - "Authorization"
      - "Accept"
