cluster/apps/development/docker-registry/docker-registry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker-registry
  name: docker-registry-http
  namespace: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  type: ClusterIP
